--- a/bcc-ufpr/grafos/p2.md
+++ b/bcc-ufpr/grafos/p2.md
@@ -11,82 +11,34 @@ Sumário:
     1.  [Algoritmo de Jarnik-Prim](#algoritmo-de-jarnik-prim)
     1.  [Algoritmo de Dijkstra](#algoritmo-de-dijkstra)
     1.  [Busca em Profundidade](#busca-em-profundidade)
-    1.  [Buscas e Grafos Direcionados](#busca-e-grafos-direcionados)
+    1.  [Buscas em Grafos Direcionados](#buscas-em-grafos-direcionados)
+1.  [Vértices e arestas de corte](#vertices-e-arestas-de-corte)
+1.  [Componentes fortes](#componentes-fortes)
 1.  [Emparelhamento](#emparelhamento)
-1.  [Algoritmo de Kruskal](#algoritmo-de-krustal)
-1.  [Planaridade](#planaridade)
-1.  [Algoritmo de Teste de Planaridade](#algoritmo-de-teste-de-planaridade)
 1.  [Referências](#referências)
-1.  [Veja também](#veja-também)
 
 ## Busca em Grafos
 
 Algoritmos que processam cada vértice e cada aresta de um grafo.
 
 Normalmente, nesses algoritmos os vértices possuem 3 estados:
-
-*   $V_2$
-
-    Vértices cujas arestas já foram processadas pelo algoritmo.
-    
-*   $V_1$
-
-    Vértices cujas algumas arestas foram processadas pelo algoritmo, mas não
-    todas.
-
-*   $V_0$
-
-    Vértices que ainda não foram processados pelo algoritmo.
+1. $V_1$: vértices cujas arestas já foram processadas.
+2. $V_2$: vértices cujas algumas arestas foram processadas, mas não todas.
+3. $V_3$: vértices que ainda não foram processados.
 
 ### Algoritmo Genérico de Busca
 
-```
-Busca(G)
-    # Inicialmente, todos os vértices estão no estado 0
-    Para v em V(G)
-        v.estado = 0
+![algoritmo-generico-de-busca](algoritmo-generico-de-busca.png)
 
-    # Executa um outro algoritmo para cada vértice no estado 0
-    Para v em V(G)
-        Se v.estado == 0
-            Busca(G, v)
-```
+![algoritmo-generico-de-busca-exemplo](algoritmo-generico-de-busca-exemplo.png)
 
-```
-# Essa função mapeia um componente inteiro
-Busca(G, r)
-    V1 = vazio
-    processe r
-    r.pai = vazio
-    acrescente r a V1
-    r.estado = 1
-    Enquanto V1 != vazio
-        v = vertice em V1
-        Se não há "próximo" vértice na vizinhança de v em G
-            retire v de V1
-            v.estado = 2
-        Senão
-            w = "próximo" vértice da vizinhança de v em G
-            Se w.estado != 0
-                Se {v, w} não foi processado
-                    processe {v, w}
-            Senão
-                processe {v, w}
-                processe w
-                w.pai = v
-                acrescente w a V1
-                w.estado = 1
-```
-
-#### Teorema 50
+#### Teorema
 
 $G_r$: componente de G que contém o vértice r
 
 Busca(G, r) devolve árvore enraizada (T, r) geradora de $G_r$
 
-processa todos os vértices e arestas de $G_r$
-
-$2 * |E(G_r)| + |V(G_r)|$
+Processa todos os vértices e arestas de $G_r$: $2 * |E(G_r)| + |V(G_r)|$
 
 Diferentes árvores geradoras de $G_r$ são construídas, dependendo dos vértices
 escolhidaos em cada iteração.
@@ -97,32 +49,7 @@ Uma aplicação do Algoritmo Genérico de Busca.
 
 Ideia: marca todos os vértices do componente com um mesmo número.
 
-```
-Componentes(G)
-    Para cada v em V(G)
-        v.estado = 0
-        v.componente = 0
-    c = 0
-    Para cada v em V(G)
-        Se v.estado == 0
-            v.componente = ++c
-            Componente(G, v)
-```
-
-```
-Componente(G, r)
-    V = vazio
-    acrescente r a V
-    r.estado = 1
-    Enquanto V != vazio
-        retire um vértice v de V
-        Para cada w da vizinhança de v em G
-            Se w.estado == 0
-                w.componente = v.componente
-                acrescente w a V
-                w.estado = 1
-        v.estado = 2
-```
+![componentes conexos](componentes-conexo.png)
 
 Complexidade: $\Theta(n + m)$.
 
@@ -134,76 +61,28 @@ distância de r (raíz).
 Em outras palavras, todos os vértices a distância d de r são processados antes
 de todos os vértices a distância d + 1 de r.
 
-```
-BuscaLargura(G)
-    Para v em V(G)
-        v.estado = 0
-    Para v em V(G)
-        Se v.estado == 0
-            BuscaLargura(G, v)
-```
+![](imagem-busca-em-largura.png)
 
-```
-BuscaLargura(G, r)
-    V = fila vazia
-    processe r
-    r.pai = vazio
-    enfile r em V
-    r.estado = 1
-    Enquanto V não está vazia
-        desenfile um vértice v de V
-        Para cada w da vizinhança de v em G
-            Se w.estado == 1
-                processe {v, w} # aresta fora da árvore
-            Senão, se w.estado == 0
-                processe w
-                processw {v, w} # aresta da árvore
-                w.pai = v
-                enfile w em V
-                w.estado = 1
-        v.estado = 2
-```
+![](busca-em-largura.png)
 
 #### Teorema
 
 Se F é a floresta direcionada resultante de uma busca em largura sobre um grafo
-G, então toda aresta fora de F é cruzada com relação a F.
+G, então toda aresta fora de F é **cruzada** com relação a F.
 
-#### Teorema 53
+#### Teorema
 
 Se T é a arborescência resultante de uma busca em largura a partir do vértice r
 em um grafo conexo G, então $$d_T(r, v) = d_g(r, v), \text{ para todo } v \in V(G)$$
 
-#### Corolário 54
+#### Corolário (Caminhos mínimos)
 
 Se (T, r) é a árvore enraizada resultante de uma busca em largura em um grafo
 conexo G, então rTv é um caminho mínimo em G para todo v em V(G).
 
-#### Caminhos Minímos
-
 Uma aplicação da busca em largura.
 
-```
-CaminhosMinimos(G, r)
-    V = fila vazia
-    r.dist = 0
-    enfile r em V
-    r.estado = 1
-    Enquanto V != vazio
-        desenfile um vértice v de V
-        Para cada w da vizinhança de v em G
-            Se w.estado == 0
-                w.pai = v
-                w.dist = w.pai.dist + 1
-                enfile w em V
-                w.estado = 1
-        v.estado = 2
-```
-
-#### Árvore de Caminhos Mínimos
-
-É uma árvore enraizada (T, r) onde rTv é um caminho mínimo em G para todo v em
-V(G).
+![](caminhos-minimos.png)
 
 Corolário: É possível computar uma árvore de caminhos mínimos geradora de um
 grafo conexo com m arestas em tempo $\Theta(m)$.
@@ -235,80 +114,17 @@ Algoritmo para encontrar uma árvore geradora mínima.
 
 **árvore geradora mínima**: árvore geradora de G de peso mínimo.
 
-```
-AGMp(G, w)
-    T = grafo vazio
-    acrescente um vértice r de G a T
-    Enquanto a fronteira de V(T) em G não estiver vazia
-        escolha uma aresta e da fronteira de V(T) em G de peso mínimo
-        acrescente a aresta e ao grafo T
-    Devolva T
-```
-
-#### Teorema
-
-Ao inicio de cada iteração, T é subárvore de uma árvore geradora mínima de G.
-
-Demonstração:
-
-1.  T\* := árvore geradora mínima de (G, w)
-2.  T' := T\*[V(T)]
-3.  última iteração para a qual T e T' coincidem
-    1. e := aresta escolhida nesta iteração
-    2. e' := aresta do ciclo fundamental de T\* + e na fronteira de V(T) em G
-    3. T" := T\* + e - e'
-    4. w(e) $\le$ w(e')
-    5. w(T") = w(T\* + e - e') = w(T\*) + w(e) - w(e') $\le$ w(T\*)
-    6. T" é árvore geradora mínimo (T\* é árvore geradora mínima)
-    7. T é subárvore de uma árvore geradora mínima de G (T é subgrafo de T")
-
-#### Corolário 62
-
-AGMp(G, w) devolve uma árvore geradora mínima em (G, w).
+![](algoritmo-de-jarnik-prim.png)
 
 #### Algoritmo de Prim
 
-```
-AGMp(G, w)
-    Para cada v em V(G)
-        v.estado = 0
-    V = vazio
-    r = um vértice de G
-    r.pai = vazio
-    r.custo = 0
-    acrescente r a V
-    r.estado = 1
-    Enquanto V != vazio
-        retire de V um vértice v com v.custo mínimo
-        Para cada u em vizinhança de v em G
-            Se u.estado == 1
-                Se w({u, v}) < u.custo
-                    u.pai = v
-                    u.custo = w({u, v})
-            Senão, se u.estado == 0
-                acrescente u a V
-                u.estado = 1
-                u.pai = v
-                u.custo = w({u, v})
-        v.estado = 2
-```
+![](algoritmo-de-prim.png)
 
-#### Corolário 63
+#### Corolário
 
 (G, w): grafo ponderado com n vértices e m arestas.
 
 AGMp(G, w) executa em tempo $\Theta(m.log(n))$
-
-Demonstração:
-
-1.  V: fila de prioridades (|V| $\le$ n)
-2.  trecho antes do laço: $\Theta(n)$
-3.  cada iteração
-    1. retira um elemento v de V: $\Theta(log(n))$
-    2. altera o custo de um vizinho u de v: $\Theta(1)$
-    3. acrescenta u a V: $\Theta(log(n))$
-4.  $\le$ 2m iterações (agregadas entre os laços externo e interno)
-5.  tempo de execução total: $\Theta(m.log(n))$
 
 ### Algoritmo de Dijkstra
 
@@ -321,45 +137,15 @@ rTv é caminho mínimo em G para todo v em V(G).
 O Dijkstra encontra a árvore de caminhos mínimos. Parece o da busca em largura
 só que com pesos.
 
-#### Teorema 64
+Teorema: para todo v em V(G) existe uma árvore de caminhos mínimos enraizada em v.
 
-Para todo v em V(G) existe uma árvore de caminhos mínimos enraizada em v.
+![](algoritmo-de-dijkstra.png)
 
-```
-CM(G, w, r)
-    T = ({r}, vazio)
-    Enquanto a fronteira de V(T) em G != vazio
-        escolha uma aresta {x, y} da fronteira V(T) em G tal que d_t(r, x) + w({x, y}) é mínimo
-        acrescente o vértice y e a aresta {x, y} a T
-    Devolta (T, r)
-```
-
-```
-CM(G, w)
-    Para cada v em V(G)
-        v.estado = 0
-    V = vazio
-    r.custo = 0
-    r.estado = 1
-    acrescente r a V
-    Enquanto V != vazio
-        retire de V um vértice v com v.custo mínimo
-        Para cada u em vizinhança de v em G
-            Se u.estado == 1
-                Se v.custo + w({u, v}) < u.custo
-                    u.pai = v
-                    u.custo = v.custo + w({u, v})
-            Senão, se u.estado == 0
-                u.pai = v
-                u.custo = v.custo + w({u, v})
-                acrescente u a V
-                u.estado = 1
-        v.estado = 2
-```
+![](cm-linha.png)
 
 Complexidade: $\Theta(m.log(n))$. "Mesmo" algoritmo de Jarnik-Prim.
 
-#### Corolário 68
+#### Corolário
 
 G: grafo com n vértices e m arestas.
 
@@ -370,32 +156,9 @@ G: grafo com n vértices e m arestas.
 
 ### Busca em Profundidade
 
-```
-BuscaProfundidade(G)
-    Para cada v em V(G)
-        v.estado = 0
-    t = 0
-    Para cada v em V(G)
-        Se v.estado == 0
-            v.pai = vazio
-            BuscaProfundidade(G, v)
-```
+![](algoritmo-de-busca-em-profundidade.png)
 
-```
-BuscaProfundidade(G, r)
-    r.pre = ++t
-    r.estado = 1
-    Para cada v na vizinhança de r em G
-        Se v.estado == 1 e v != r.pai
-            processe {r, v}
-        Senão, se v.estado == 0
-            v.pai = r
-            processe {r, v}
-            BuscaProfundidade(G, v)
-    processe r
-    r.estado = 2
-    r.pos = ++t
-```
+![](profundidade-exemplo.png)
 
 Seja F a floresta resultante da execução de BuscaProfundidade(G), então
 1.  BuscaProfundidade(G, r) processa a árvore enraizada (T, r) e as arestas de
@@ -406,64 +169,27 @@ Seja F a floresta resultante da execução de BuscaProfundidade(G), então
     processamento da subárvore de T de raiz v.
 4.  ao final, t = 2 * |V(G)|.
 
-#### Teorema 69
+#### Teorema
 
 Se F é a floresta resultante de uma busca em profundidade em um grafo G e u é
 ancestral de v em F, então u.pre < v.pre < v.pos < u.pos.
 
-Demonstração:
+![](teorema80.png)
 
-1.  Decorre da definição dos números de pré e pós ordem que u.pre < u.pos e
-    v.pre < v.pos.
-2.  Como u é ancestral de v em F, do Algoritmo BuscaProfundidade(G, r) temos
-    que u.pre < v.pre e v.pos < u.pos.
-3.  e daí, temos u.pre < v.pre < v.pos < u.pos.
-
-#### Teorema 70
+#### Teorema
 
 Se F é a floresta resultante de uma busca em profundidade de um grafo G, então
 toda aresta em G - F é de retorno com relação a F.
 
-### Buscas e Grafos Direcionados
+![](teorema81.png)
 
-Agora a busca é em grafos direcionados.
+### Buscas em Grafos Direcionados
 
-```
-Busca(G)
-    F = grafo direcionado vazio
-    Para v em V(G)
-        v.estado = 0
-    Para v em V(G)
-        Se v.estado == 0
-            (T, v) = Busca(G, v)
-            acrescente T a F
-    Devolva F
-```
+Mesma coisa, só que agora a busca é em grafos direcionados.
 
-```
-Busca(G, r)
-    V1 = vazio
-    processe r
-    r.pai = vazio
-    acrescente r a V1
-    r.estado = 1
-    Enquanto V1 != vazio
-        v = vértice em V1
-        Se não há "próximo" vértice na vizinhança de saída de v em G
-            retire v de V1
-            v.estado = 2
-        Senão
-            w = "próximo" vértice na vizinhança de saída de v em G
-            Se w.estado != 0
-                Se (v, w) não foi processada
-                    processe (v, w)
-            Senão
-                processe (v, w)
-                processe w
-                w.pai = v
-                acrescente w a V1
-                w.estado = 1
-```
+![](busca-em-grafos-direcionados.png)
+
+![](exemplo-busca-em-grafos-direcionados.png)
 
 1.  A busca a partir do vértice v devolve uma arborescência de raiz v em vez de
     uma árvore enraizada em v.
@@ -473,13 +199,13 @@ Busca(G, r)
 4.  Se T é a árborescência resultante de uma busca no grafo direcionado G,
     então V[T] é o conjunto dos vértices de G alcançáveis a partir de v em G.
 
-#### Corolário 71
+#### Corolário
 
 O algoritmo Busca(G) devolve uma floresta direcionada geradora do grafo G e
 processa todos os vértices e arcos de G. Além disso, o laço do Algoritmo
 Busca(G, r) é executado $2 * |E(G)| + |V(G)|$ vezes.
 
-#### Corolário 72
+#### Corolário
 
 Se cada operação no laço do algoritmo Busca(G, r) é executada em tempo
 $\Theta(1)$, então o tempo de execução do algoritmo Busca(G) é $\Theta(|E(G)| +
@@ -495,7 +221,7 @@ anteriores a seus descendentes.
 Uma **pós-ordem** de F é uma permutação de V(F) na qual ancestrais são
 posteriores a seus descendentes.
 
-#### Teorema 73
+#### Teorema
 
 F: floresta direcionada resultante de uma busca em profundidade sobre o grafo direcionado G.
 
@@ -515,7 +241,7 @@ A ordem < induzida sobre V(G) dada por:
 1.  u < v := u.pre < v.pre - para todo u e v em V(G) - é uma pré-ordem de F.
 2.  u < v := u.pos < v.pos - para todo u e v em V(G) - é uma pós-ordem de F.
 
-#### Teorema 74
+#### Teorema
 
 O grafo condensado de um grafo direcionado é acíclico.
 
@@ -527,78 +253,163 @@ Dado um grafo direcionado G. Uma **ordenação topológica** de G é uma permuta
 $(v_1, ..., v_n)$ de V(G) que "respeita a direção dos arcos" de G, isto é, $$i
 < j, \forall (v_i, v_j) \in A(G)$$
 
-![Ordenação topológica](ordenacao-topologica.png)
-
-#### Teorema 75
+#### Teorema
 
 Um grafo direcionado G admite ordenação topológico se, e somente se, é acíclico.
 
-#### Teorema 76
+#### Teorema
 
 Um grafo direcionado G é acíclico se, e somente se, qualquer floresta
 direcionada resultante de uma busca em profundidade sobre G não tem arcos de
 retorno.
 
-#### Teorema 77
+#### Teorema
 
 O reverso da pós-ordem de uma floresta direcionada resultante de uma busca em
 profundiade em um grafo direcionado acíclico G é uma ordenação topológica de G.
 
-Demonstração:
-1.  Seja $(v_1, ..., v_n)$ a permutação de V(G) em ordem descrescente de
-    pós-ordem, isto é, $i < j$ se, e somente se, $v_i.pos > v_j.pos$, para todo
-    $1 \le i \lt j \le n \in A(G)$.
-2.  Esta permutação é uma ordenação topológica de G. Basta provar que $i < j$
-    para todo $(v_i, v_j) \in A(G)$, ou seja, que $v_i.pos > v_j.pos$ para todo
-    $(v_i, v_j) \in A(G)$.
-3.  Se tivéssemos $u.pos < v.pos$ então (u, v) seria arco de retorno em G (T. 73).
-4.  Como G é acíclico, não tem arco de retorno (T. 76).
-5.  Portanto, $v.pos < u.pos$ para todo $(u, v) \in A(G)$ e $(v_1, ..., v_n)$ é
-    ordenação topológica de G.
-
 #### Algoritmo de ordenação topológica
 
-```
-Ordena(G)
-    Para cada v em V(G)
-        v.estado = 0
-    G.I = lista vazia
-    Para cada v em V(G)
-        Se v.estado == 0
-            Ordena(G, v)
-```
+![](algoritmo-ordenacao-topologica.png)
 
-```
-Ordena(G, r)
-    r.estado = 1
-    Para cada v na vizinhança de saída de r em G
-        Se v.estado == 0
-            Ordena(G, v)
-    acrescente r ao início de G.I
-    r.estado = 2
-```
+![](ordenacao-topologica.png)
+
+$G.l = [v3, v1, v4, v5, v6, v7]$
+
+
+## Vértices e arestas de corte
+
+### Teorema
+
+Seja (T, r) uma árvore enraizada geradora de um grafo G produzida por uma busca
+em profundidade.
+
+1.  O vértice v é vértice de corte em G se, e somente se:
+    1.  $v = r$ e tem mais de um filho, ou,
+    2.  $v != r$ e tem um filho w tal que nenhum descendente de w é vizinho de
+        um ancestral próprio de v.
+2.  A aresta {u, v} é aresta de corte em G se, e somente se, u é pai de v em T
+    e nenhuma outra aresta em G liga um descendente de v a um ancestral de u.
+
+### Low point
+
+(T, r): árvore enraizada produzida por uma busca em profundidade.
+
+Low point de v com relação a T é o nível do vértice mais ancestral dentre v e
+os vizinhos de seus descendentes por arestas de E(G) - E(T), isto é, $$l_T(v) =
+\text{min}\{L_T(v)\} \cup \{L_T(u) | {u, w} \in E(G - T) \text{ e w é 
+descendente de v em T} \}$$
+
+![](low-point.png)
+
+### Corolário
+
+Seja (T, r) a árvore enraizada produzida por uma busca em profundidade no grafo
+conexo G.
+
+1.  O vértice v é vértice de corte em G se, e somente se:
+    1.  $v = r$ e tem mais de um filho, ou,
+    2.  $v \neq r$ e $L_T(v) \le l_T(w)$ para algum filho w de v em T.
+2.  A aresta {u, v} é aresta de corte em G se, e somente se, u é pai de v em T
+    e $L_T(u) \lt l_T(v)$.
+
+## Componentes fortes
+
+### Teorema
+
+Se S é o sumidouro do grafo condensado de G e T é árvore resultante de uma
+busca em G a partir de um vértice de S, então G[V(T)] = S.
+
+![](decompoe.png)
+
+### Teorema
+
+O vértice de maior pós-ordem está em uma fonte.
+
+### Corolário
+
+O vértice de maior pós-ordem do grafo transposto de um grafo direcionado G é
+vértice de um sumidouro do grafo condensado de G.
+
+![](decompoe-2.png)
+
+![](algoritmo-decompoe.png)
 
 ## Emparelhamento
 
-TODO
+![Emparelhamento](emparelhamento.png)
 
-## Algoritmo de Kruskal
+Um **emparelhamento** ("matching") em um grafo G é um conjunto de arestas de G
+sem vértices em comum.
 
-TODO
+### Coloração de arestas
 
-## Planaridade
+![coloracao de arestas](coloracao-arestas.png)
 
-TODO
+**Coloração de arestas** de uma grafo G: partição de E(G) em emparelhamentos.
+Cada emparelhamento é uma cor de coloração.
 
-## Algoritmo de Teste de Planaridade
+**Indice cromático** de $G(\chi'(G))$: menor número de cores distintas
+necessário para colorir as arestas de um grafo.
 
-TODO
+#### Teorema de Vizing
+
+Todo grafo G admite uma coloração de suas arestas em $\Delta(G) + 1$ cores e
+essa coloração pode ser computada em tempo polinomial.
+
+#### Teorema de Holyer
+
+Decidir se as arestas de um grafo G podem ser coloridas com $\Delta(G)$ cores é
+um problema $NP$-difícil.
+
+### Caminho M-aumentante
+
+Dado um emparelhamento M de um grafo G:
+*   M cobre o vértice v (ou v é coberto por M) se v é ponta de alguma aresta de
+    M. Caso contrário, v é descoberto por M.
+*   M cobre $X \subseteq V(G)$ se $v \in e$, para todo $v \in X$, para algum $e
+    \in M$.
+*   Um caminho $(v_0, ..., v_n)$ é um caminho M-alternante em G se suas arestas
+    estão ou não em M de maneira alternada, isto é, se $$\{v_{i-1}, v_i\} \in
+    M, \text{ se, e somente se, } \{v_i, v_{i+1}\} \notin M \text{, para todo }
+    1 \le i \lt n$$.
+*   Uma árvore T é M-alternante com relação a um vértice $r \in V(T)$ se o
+    caminho de $rTv$ é M-alternante para todo $v \in V(T)$.
+*   Um caminho M-alternante é M-aumentante se suas pontas não são cobertas por
+    M.
+
+### Diferença simétrica
+
+Dados dois conjuntos A e B, a diferença simétrica de A e B é $$A \oplus B := (A
+\cup B) \setminus (B \cap A)$$
+
+Alternativamente, temos que $$A \oplus B = (A \setminus B) \cup (B \setminus A)$$
+
+Resumindo, ou está em A ou está em B.
+
+### Teorema
+
+Se M é um emparelhamento em um grafo G e C é um caminho M-aumentante em G,
+então o conjunto $M \oplus E(C)$ é um emparelhamento de tamanho $|M| + 1$ em G.
+
+![teorema 81](teorema81-parte2.png)
+
+### Teorema de Berge
+
+O emparelhamento M é máximo no grafo G se, e somente se, não existe caminho
+M-aumentante em G.
+
+### Teorema de Hall
+
+Um grafo bipartido G com bipartição {A, B} e seja $X \subseteq A$. O grafo G
+tem um emparelhamento que cobre X se, e somente se, $$|S| \le |\Gamma_G(S)|
+\text{, para todo } S \subseteq X$$
+
+### Algoritmo de emparelhamento
+
+![Algoritmo emparelhamento](algoritmo-emparelhamento.png)
 
 ## Referências
-
-* <https://www.youtube.com/watch?v=5qbNUmyC01s&list=PL-5ieW_feQNQeJpn0zmttgVbmUqGClG05&index=42>
-
-## Veja também
 
 * <https://www.inf.ufpr.br/murilo/ci1065/ci1065.html>
 * <https://www.inf.ufpr.br/murilo/ci1065/slides/>
