--- a/bcc-ufpr/grafos/p2.md
+++ b/bcc-ufpr/grafos/p2.md
@@ -51,7 +51,7 @@ Ideia: marca todos os vértices do componente com um mesmo número.
 
 ![componentes conexos](componentes-conexo.png)
 
-Complexidade: $\Theta(n + m)$.
+Complexidade: O(n + m).
 
 ### Busca em Largura
 
@@ -84,35 +84,23 @@ Uma aplicação da busca em largura.
 
 ![](caminhos-minimos.png)
 
-Corolário: É possível computar uma árvore de caminhos mínimos geradora de um
-grafo conexo com m arestas em tempo $\Theta(m)$.
-
-#### Distâncias e Diâmetro
-
-Corolário: É possível computar as distâncias e os caminhos mínimos entre todos
-os pares de vértices de um grafo com n vértices e m arestas em tempo
-$\Theta(n.m)$.
-
-Corolário: É possível computar o diâmetro de um grafo conexo com n vértices e m
-arestas em tempo $\Theta(n.m)$.
-
 #### Bipartição
 
 Teorema: Se (T, r) é a árvore enraizada resultante de uma busca em largura
-sobre um grafo conexo G, então $$|d_g(r, u) - d_g(r, v)| \le 1, \text{ para todo } \{u, v\} \in E(G - T)$$
+sobre um grafo conexo G, então $$|d_g(r, u) - d_g(r, v)| \le 1, \text{ para
+todo } \{u, v\} \in E(G - T)$$
 
 Teorema: Seja (T, r) a árvore enraizada resultante de uma busca em largura
 sobre um grafo conexo G. O grafo G é bipartido se, e somente se, d(r, u) e d(r,
 v) tem paridades diferentes para toda aresta {u, v} em E(G - T).
 
 Corolário: É possível decidir se um grafo de n vértices e m arestas é bipartido
-e, em caso positivo, computar sua bipartição em tempo $\Theta(n + m)$.
+e, em caso positivo, computar sua bipartição em tempo O(n + m).
 
 ### Algoritmo de Jarnik-Prim
 
-Algoritmo para encontrar uma árvore geradora mínima.
-
-**árvore geradora mínima**: árvore geradora de G de peso mínimo.
+Algoritmo para encontrar uma árvore geradora mínima (árvore geradora de G de
+peso mínimo).
 
 ![](algoritmo-de-jarnik-prim.png)
 
@@ -120,22 +108,13 @@ Algoritmo para encontrar uma árvore geradora mínima.
 
 ![](algoritmo-de-prim.png)
 
-#### Corolário
-
-(G, w): grafo ponderado com n vértices e m arestas.
-
-AGMp(G, w) executa em tempo $\Theta(m.log(n))$
+AGMp(G, w) executa em tempo O(m.log(n)).
 
 ### Algoritmo de Dijkstra
 
-(G, w): grafo ponderado conexo.
-
-**árvore de caminhos mínimos**: árvore enraizada (T, r) geradora de G.
-
 rTv é caminho mínimo em G para todo v em V(G).
 
-O Dijkstra encontra a árvore de caminhos mínimos. Parece o da busca em largura
-só que com pesos.
+O Dijkstra encontra a árvore de caminhos mínimos. Parece o de Prim.
 
 Teorema: para todo v em V(G) existe uma árvore de caminhos mínimos enraizada em v.
 
@@ -143,14 +122,13 @@ Teorema: para todo v em V(G) existe uma árvore de caminhos mínimos enraizada e
 
 ![](cm-linha.png)
 
-Complexidade: $\Theta(m.log(n))$. "Mesmo" algoritmo de Jarnik-Prim.
+Complexidade: O(m.log(n). "Mesmo" algoritmo de Jarnik-Prim.
 
 #### Corolário
 
 G: grafo com n vértices e m arestas.
 
-É possível computar em tempo $\Theta(n.m.log(n))$:
-
+É possível computar em tempo O(n.m.log(n)):
 1. distâncias entre todos os pares de vértices de G.
 2. diâmetro de G.
 
@@ -199,18 +177,6 @@ Mesma coisa, só que agora a busca é em grafos direcionados.
 4.  Se T é a árborescência resultante de uma busca no grafo direcionado G,
     então V[T] é o conjunto dos vértices de G alcançáveis a partir de v em G.
 
-#### Corolário
-
-O algoritmo Busca(G) devolve uma floresta direcionada geradora do grafo G e
-processa todos os vértices e arcos de G. Além disso, o laço do Algoritmo
-Busca(G, r) é executado $2 * |E(G)| + |V(G)|$ vezes.
-
-#### Corolário
-
-Se cada operação no laço do algoritmo Busca(G, r) é executada em tempo
-$\Theta(1)$, então o tempo de execução do algoritmo Busca(G) é $\Theta(|E(G)| +
-|V(G)|)$.
-
 #### Pré-ordem e pós-ordem
 
 Seja F uma floresta direcionada.
@@ -250,8 +216,7 @@ O grafo condensado de um grafo direcionado é acíclico.
 #### Ordenação topológica
 
 Dado um grafo direcionado G. Uma **ordenação topológica** de G é uma permutação
-$(v_1, ..., v_n)$ de V(G) que "respeita a direção dos arcos" de G, isto é, $$i
-< j, \forall (v_i, v_j) \in A(G)$$
+dos vértices de V(G) que "respeita a direção dos arcos" de G.
 
 #### Teorema
 
@@ -285,8 +250,8 @@ Seja (T, r) uma árvore enraizada geradora de um grafo G produzida por uma busca
 em profundidade.
 
 1.  O vértice v é vértice de corte em G se, e somente se:
-    1.  $v = r$ e tem mais de um filho, ou,
-    2.  $v != r$ e tem um filho w tal que nenhum descendente de w é vizinho de
+    1.  v = r e tem mais de um filho, ou,
+    2.  v != r e tem um filho w tal que nenhum descendente de w é vizinho de
         um ancestral próprio de v.
 2.  A aresta {u, v} é aresta de corte em G se, e somente se, u é pai de v em T
     e nenhuma outra aresta em G liga um descendente de v a um ancestral de u.
