--- a/bcc-ufpr/grafos/p2.md
+++ b/bcc-ufpr/grafos/p2.md
@@ -22,9 +22,9 @@ Sumário:
 Algoritmos que processam cada vértice e cada aresta de um grafo.
 
 Normalmente, nesses algoritmos os vértices possuem 3 estados:
-1. $V_1$: vértices cujas arestas já foram processadas.
-2. $V_2$: vértices cujas algumas arestas foram processadas, mas não todas.
-3. $V_3$: vértices que ainda não foram processados.
+1. V1: vértices cujas arestas já foram processadas.
+2. V2: vértices cujas algumas arestas foram processadas, mas não todas.
+3. V3: vértices que ainda não foram processados.
 
 ### Algoritmo Genérico de Busca
 
@@ -34,14 +34,10 @@ Normalmente, nesses algoritmos os vértices possuem 3 estados:
 
 #### Teorema
 
-$G_r$: componente de G que contém o vértice r
+Busca(G, r) devolve árvore enraizada (T, r) geradora de Gr.
 
-Busca(G, r) devolve árvore enraizada (T, r) geradora de $G_r$
-
-Processa todos os vértices e arestas de $G_r$: $2 * |E(G_r)| + |V(G_r)|$
-
-Diferentes árvores geradoras de $G_r$ são construídas, dependendo dos vértices
-escolhidaos em cada iteração.
+Diferentes árvores geradoras de são construídas, dependendo dos vértices
+escolhidos em cada iteração.
 
 #### Componentes Conexos
 
