--- a/bcc-ufpr/grafos/p2.md
+++ b/bcc-ufpr/grafos/p2.md
@@ -141,7 +141,7 @@ Seja F a floresta resultante da execução de BuscaProfundidade(G), então
     processamento da subárvore de T de raiz v ("DFS number").
 3.  v.pos é o **índice de pós-ordem** de v, que indice o "momento" do fim do
     processamento da subárvore de T de raiz v.
-4.  ao final, t = 2 * |V(G)|.
+4.  ao final, t = 2 \* |V(G)|.
 
 #### Teorema
 
@@ -173,16 +173,6 @@ Mesma coisa, só que agora a busca é em grafos direcionados.
 4.  Se T é a árborescência resultante de uma busca no grafo direcionado G,
     então V[T] é o conjunto dos vértices de G alcançáveis a partir de v em G.
 
-#### Pré-ordem e pós-ordem
-
-Seja F uma floresta direcionada.
-
-Uma **pré-ordem** de F é uma permutação de V(F) na qual ancestrais são
-anteriores a seus descendentes.
-
-Uma **pós-ordem** de F é uma permutação de V(F) na qual ancestrais são
-posteriores a seus descendentes.
-
 #### Teorema
 
 F: floresta direcionada resultante de uma busca em profundidade sobre o grafo direcionado G.
@@ -190,8 +180,7 @@ F: floresta direcionada resultante de uma busca em profundidade sobre o grafo di
 v.pre e v.pos: índices de pré-ordem e pós-ordem computados.
 
 O arco (u, v), com relação a F é:
-1.  arco de F ou arco de avenço se, e somente se, `u.pre < v.pre < v.pos <
-    u.pos`.
+1.  arco de avanço se, e somente se, `u.pre < v.pre < v.pos < u.pos`.
 2.  arco cruzado se, e somente se, `v.pre < v.pos < u.pre < u.pos`.
 3.  arco de retorno se, e somente se, `v.pre < u.pre < u.pos < v.pos`.
 
@@ -227,7 +216,7 @@ retorno.
 #### Teorema
 
 O reverso da pós-ordem de uma floresta direcionada resultante de uma busca em
-profundiade em um grafo direcionado acíclico G é uma ordenação topológica de G.
+profundidade em um grafo direcionado acíclico G é uma ordenação topológica de G.
 
 #### Algoritmo de ordenação topológica
 
@@ -235,8 +224,7 @@ profundiade em um grafo direcionado acíclico G é uma ordenação topológica d
 
 ![](ordenacao-topologica.png)
 
-$G.l = [v3, v1, v4, v5, v6, v7]$
-
+G.l = [v3, v1, v4, v5, v6, v7]
 
 ## Vértices e arestas de corte
 
@@ -257,22 +245,19 @@ em profundidade.
 (T, r): árvore enraizada produzida por uma busca em profundidade.
 
 Low point de v com relação a T é o nível do vértice mais ancestral dentre v e
-os vizinhos de seus descendentes por arestas de E(G) - E(T), isto é, $$l_T(v) =
-\text{min}\{L_T(v)\} \cup \{L_T(u) | {u, w} \in E(G - T) \text{ e w é 
-descendente de v em T} \}$$
+os vizinhos de seus descendentes por arestas de E(G) - E(T).
+
+![](def-low-point.png)
 
 ![](low-point.png)
 
 ### Corolário
 
-Seja (T, r) a árvore enraizada produzida por uma busca em profundidade no grafo
-conexo G.
-
 1.  O vértice v é vértice de corte em G se, e somente se:
-    1.  $v = r$ e tem mais de um filho, ou,
-    2.  $v \neq r$ e $L_T(v) \le l_T(w)$ para algum filho w de v em T.
+    1.  v = r e tem mais de um filho, ou,
+    2.  v != r e low-point(v) < low-point(w) para algum filho w de v em T.
 2.  A aresta {u, v} é aresta de corte em G se, e somente se, u é pai de v em T
-    e $L_T(u) \lt l_T(v)$.
+    e low-point(u) < low-point(v).
 
 ## Componentes fortes
 
@@ -310,50 +295,32 @@ sem vértices em comum.
 **Coloração de arestas** de uma grafo G: partição de E(G) em emparelhamentos.
 Cada emparelhamento é uma cor de coloração.
 
-**Indice cromático** de $G(\chi'(G))$: menor número de cores distintas
-necessário para colorir as arestas de um grafo.
+**Indice cromático** de G: menor número de cores distintas necessário para
+colorir as arestas de um grafo.
 
 #### Teorema de Vizing
 
-Todo grafo G admite uma coloração de suas arestas em $\Delta(G) + 1$ cores e
-essa coloração pode ser computada em tempo polinomial.
+![](teorema-vizing.png)
 
 #### Teorema de Holyer
 
-Decidir se as arestas de um grafo G podem ser coloridas com $\Delta(G)$ cores é
-um problema $NP$-difícil.
+![](teorema-holyer.png)
 
 ### Caminho M-aumentante
 
-Dado um emparelhamento M de um grafo G:
-*   M cobre o vértice v (ou v é coberto por M) se v é ponta de alguma aresta de
-    M. Caso contrário, v é descoberto por M.
-*   M cobre $X \subseteq V(G)$ se $v \in e$, para todo $v \in X$, para algum $e
-    \in M$.
-*   Um caminho $(v_0, ..., v_n)$ é um caminho M-alternante em G se suas arestas
-    estão ou não em M de maneira alternada, isto é, se $$\{v_{i-1}, v_i\} \in
-    M, \text{ se, e somente se, } \{v_i, v_{i+1}\} \notin M \text{, para todo }
-    1 \le i \lt n$$.
-*   Uma árvore T é M-alternante com relação a um vértice $r \in V(T)$ se o
-    caminho de $rTv$ é M-alternante para todo $v \in V(T)$.
-*   Um caminho M-alternante é M-aumentante se suas pontas não são cobertas por
-    M.
+![](caminho-m-aumentante.png)
 
 ### Diferença simétrica
 
-Dados dois conjuntos A e B, a diferença simétrica de A e B é $$A \oplus B := (A
-\cup B) \setminus (B \cap A)$$
-
-Alternativamente, temos que $$A \oplus B = (A \setminus B) \cup (B \setminus A)$$
+![](diff-simetrica.png)
 
 Resumindo, ou está em A ou está em B.
 
 ### Teorema
 
-Se M é um emparelhamento em um grafo G e C é um caminho M-aumentante em G,
-então o conjunto $M \oplus E(C)$ é um emparelhamento de tamanho $|M| + 1$ em G.
+![](teorema101.png)
 
-![teorema 81](teorema81-parte2.png)
+![](teorema81-parte2.png)
 
 ### Teorema de Berge
 
@@ -362,13 +329,11 @@ M-aumentante em G.
 
 ### Teorema de Hall
 
-Um grafo bipartido G com bipartição {A, B} e seja $X \subseteq A$. O grafo G
-tem um emparelhamento que cobre X se, e somente se, $$|S| \le |\Gamma_G(S)|
-\text{, para todo } S \subseteq X$$
+![](teorema-hall.png)
 
 ### Algoritmo de emparelhamento
 
-![Algoritmo emparelhamento](algoritmo-emparelhamento.png)
+![](algoritmo-emparelhamento.png)
 
 ## Referências
 
