--- a/bcc-ufpr/grafos/p2.md
+++ b/bcc-ufpr/grafos/p2.md
@@ -32,16 +32,12 @@ Normalmente, nesses algoritmos os vértices possuem 3 estados:
 
 ![algoritmo-generico-de-busca-exemplo](algoritmo-generico-de-busca-exemplo.png)
 
-#### Teorema
-
-Busca(G, r) devolve árvore enraizada (T, r) geradora de Gr.
-
 Diferentes árvores geradoras de são construídas, dependendo dos vértices
 escolhidos em cada iteração.
 
 #### Componentes Conexos
 
-Uma aplicação do Algoritmo Genérico de Busca.
+Uma aplicação do Algoritmo Genérico de Busca é encontrar os componentes conexos.
 
 Ideia: marca todos os vértices do componente com um mesmo número.
 
@@ -54,9 +50,6 @@ Complexidade: O(n + m).
 Uma busca em que os vértices são processados em ordem não decrescente de
 distância de r (raíz).
 
-Em outras palavras, todos os vértices a distância d de r são processados antes
-de todos os vértices a distância d + 1 de r.
-
 ![](imagem-busca-em-largura.png)
 
 ![](busca-em-largura.png)
@@ -68,30 +61,20 @@ G, então toda aresta fora de F é **cruzada** com relação a F.
 
 #### Teorema
 
-Se T é a arborescência resultante de uma busca em largura a partir do vértice r
-em um grafo conexo G, então $$d_T(r, v) = d_g(r, v), \text{ para todo } v \in V(G)$$
+![](teorema-busca-largura-distancia.png)
 
 #### Corolário (Caminhos mínimos)
 
 Se (T, r) é a árvore enraizada resultante de uma busca em largura em um grafo
 conexo G, então rTv é um caminho mínimo em G para todo v em V(G).
 
-Uma aplicação da busca em largura.
-
 ![](caminhos-minimos.png)
 
 #### Bipartição
 
-Teorema: Se (T, r) é a árvore enraizada resultante de uma busca em largura
-sobre um grafo conexo G, então $$|d_g(r, u) - d_g(r, v)| \le 1, \text{ para
-todo } \{u, v\} \in E(G - T)$$
-
 Teorema: Seja (T, r) a árvore enraizada resultante de uma busca em largura
 sobre um grafo conexo G. O grafo G é bipartido se, e somente se, d(r, u) e d(r,
 v) tem paridades diferentes para toda aresta {u, v} em E(G - T).
-
-Corolário: É possível decidir se um grafo de n vértices e m arestas é bipartido
-e, em caso positivo, computar sua bipartição em tempo O(n + m).
 
 ### Algoritmo de Jarnik-Prim
 
