--- a/bcc-ufpr/grafos/p2.md
+++ b/bcc-ufpr/grafos/p2.md
@@ -124,7 +124,7 @@ Seja F a floresta resultante da execução de BuscaProfundidade(G), então
     processamento da subárvore de T de raiz v ("DFS number").
 3.  v.pos é o **índice de pós-ordem** de v, que indice o "momento" do fim do
     processamento da subárvore de T de raiz v.
-4.  ao final, t = 2 \* |V(G)|.
+4.  ao final, t = 2n, sendo n o número de vértices em G.
 
 #### Teorema
 
