--- a/bcc-ufpr/grafos/p2.md
+++ b/bcc-ufpr/grafos/p2.md
@@ -297,7 +297,7 @@ colorir as arestas de um grafo.
 
 ![](diff-simetrica.png)
 
-Resumindo, ou está em A ou está em B.
+União do que está só em A com o que está só em B.
 
 ### Teorema
 
