--- a/bcc-ufpr/grafos/p2.md
+++ b/bcc-ufpr/grafos/p2.md
@@ -12,7 +12,7 @@ Sumário:
     1.  [Algoritmo de Dijkstra](#algoritmo-de-dijkstra)
     1.  [Busca em Profundidade](#busca-em-profundidade)
     1.  [Buscas em Grafos Direcionados](#buscas-em-grafos-direcionados)
-1.  [Vértices e arestas de corte](#vertices-e-arestas-de-corte)
+1.  [Vértices e arestas de corte](#vértices-e-arestas-de-corte)
 1.  [Componentes fortes](#componentes-fortes)
 1.  [Emparelhamento](#emparelhamento)
 1.  [Referências](#referências)
