fix: lowpoint def

--- a/bcc-ufpr/grafos/p2.md
+++ b/bcc-ufpr/grafos/p2.md
@@ -238,9 +238,9 @@ os vizinhos de seus descendentes por arestas de E(G) - E(T).
 
 1.  O vértice v é vértice de corte em G se, e somente se:
     1.  v = r e tem mais de um filho, ou,
-    2.  v != r e low-point(v) < low-point(w) para algum filho w de v em T.
+    2.  v != r e nível(v) <= low-point(w) para algum filho w de v em T.
 2.  A aresta {u, v} é aresta de corte em G se, e somente se, u é pai de v em T
-    e low-point(u) < low-point(v).
+    e nível(u) < low-point(v).
 
 ## Componentes fortes
 
